<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="300dp"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="1dp"
        android:background="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvDesc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="3"
            android:text="@string/page_sale_dialog_title"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/boxItem"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_margin="10dp"
            app:layout_constraintBottom_toTopOf="@+id/btOk"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDesc" />

        <ImageView
            android:id="@+id/ivClient"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_margin="15dp"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_client"
            app:layout_constraintStart_toStartOf="@+id/boxItem"
            app:layout_constraintTop_toTopOf="@+id/boxItem"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/tvClientLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/page_sale_dialog_client_label"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="@+id/ivClient"
            app:layout_constraintEnd_toEndOf="@+id/boxItem"
            app:layout_constraintStart_toEndOf="@+id/ivClient"
            app:layout_constraintTop_toTopOf="@+id/ivClient" />

        <EditText
            android:id="@+id/etClient"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:backgroundTint="@color/white"
            android:hint="@string/page_sale_dialog_client_hint"
            android:inputType="text"
            android:maxLength="100"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/boxItem"
            app:layout_constraintEnd_toEndOf="@id/boxItem"
            app:layout_constraintStart_toStartOf="@id/boxItem" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btOk"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/shape_button_blue"
            android:text="@string/page_sale_dialog_bt_ok"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btCancel"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/shape_button_blue"
            android:text="@string/page_sale_dialog_bt_cancel"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btOk" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>