<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardBackgroundColor="@color/green"
    card_view:cardCornerRadius="5dp"
    card_view:cardElevation="5dp"
    card_view:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_light"
        android:padding="10dp">

        <TextView
            android:id="@+id/tvClient"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:textColor="@color/blue_dark"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/ivDelete"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Nome Cliente" />

        <TextView
            android:id="@+id/tvIdLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="2dp"
            android:text="@string/page_sale_item_id"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvClient" />

        <TextView
            android:id="@+id/tvDataLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="2dp"
            android:text="@string/page_sale_item_data"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/ivEdit"
            app:layout_constraintStart_toEndOf="@+id/tvIdLabel"
            app:layout_constraintTop_toTopOf="@+id/tvIdLabel" />

        <TextView
            android:id="@+id/tvId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:text="@string/page_sale_item_id"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvIdLabel"
            tools:text="1000" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="2dp"
            android:text="@string/page_sale_item_data"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/ivEdit"
            app:layout_constraintStart_toEndOf="@+id/tvIdLabel"
            app:layout_constraintTop_toBottomOf="@+id/tvIdLabel"
            tools:text="01/01/2024 12:00" />

        <TextView
            android:id="@+id/tvTotalLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="2dp"
            android:text="@string/page_sale_item_total"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvId" />

        <TextView
            android:id="@+id/tvTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:text="@string/page_sale_item_total"
            android:textColor="@color/red"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTotalLabel"
            tools:text="0.00" />

        <ImageView
            android:id="@+id/ivShare"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="@color/white"
            android:contentDescription="@string/page_sale_bt_share_info"
            android:padding="2dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_share"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivEdit"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="5dp"
            android:background="@color/white"
            android:contentDescription="@string/page_sale_bt_edit_info"
            android:padding="2dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_edit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivShare" />

        <ImageView
            android:id="@+id/ivDelete"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="@color/red"
            android:contentDescription="@string/page_sale_bt_delete_info"
            android:padding="2dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_delete"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@color/white" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>


