<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.page_list_sale.ListSaleFragment">

    <TextView
        android:id="@+id/tvInfo"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:background="@color/blue_dark"
        android:gravity="center"
        android:maxLines="3"
        android:text="@string/page_sale_msg_sales"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="5dp"
        android:indeterminate="true"
        app:layout_constraintEnd_toEndOf="@+id/tvInfo"
        app:layout_constraintTop_toTopOf="@+id/tvInfo" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toTopOf="@+id/viewLine1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInfo"
        tools:listitem="@layout/item_list_sale" />

    <View
        android:id="@+id/viewLine1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="10dp"
        android:background="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btNewSale"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btNewSale"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/shape_button_blue"
        android:contentDescription="@string/page_sale_bt_sale_info"
        android:drawableStart="@drawable/ic_dollar_white"
        android:padding="5dp"
        android:text="@string/page_sale_bt_sale"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="@color/black" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/vgEmptyData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="ivEmptyData,tvEmptyData" />

    <ImageView
        android:id="@+id/ivEmptyData"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="15dp"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_sale"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4"
        app:tint="@color/blue_light" />

    <TextView
        android:id="@+id/tvEmptyData"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center_horizontal"
        android:text="@string/page_sale_msg_empty"
        android:textColor="@color/blue_dark"
        android:textSize="26sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivEmptyData" />

</androidx.constraintlayout.widget.ConstraintLayout>